Fix multi currency issues with investment transaction editor

BUG: 445591
FIXED-IN: 5.2